--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Membership management for Friends of Chichester Harbour",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/tape/bin/tape ./test/*.test.js | ./node_modules/.bin/tap-spec",
-    "jshint": "jshint -c .jshintrc",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/tape/bin/tape ./test/*.test.js && ./node_modules/.bin/istanbul check-coverage --statements 95 --functions 95 --lines 95 --branches 95"
+    "test": "tape ./test/*.test.js | tap-spec",
+    "jshint": "jshint -c ./.jshintrc --exclude-path .gitignore .",
+    "coverage": "istanbul cover tape ./test/*.test.js && istanbul check-coverage --statements 95 --functions 95 --lines 95 --branches 95",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,11 @@
   "pre-commit": [
     "jshint",
     "coverage"
-  ]
+  ],
+  "dependencies": {
+    "handlebars": "^3.0.1",
+    "hapi": "^8.4.0",
+    "hapi-auth-cookie": "^2.0.0",
+    "request": "^2.55.0"
+  }
 }
