--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tape ./test/*.test.js | tap-spec",
     "jshint": "jshint -c ./.jshintrc --exclude-path .gitignore .",
     "coverage": "istanbul cover tape ./test/*.test.js && istanbul check-coverage --statements 95 --functions 95 --lines 95 --branches 95",
+    "sass": "node-sass ./assets/css/main.scss ./assets/css/main.css",
     "start": "node index.js"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "devDependencies": {
     "istanbul": "^0.3.13",
     "jshint": "^2.7.0",
+    "node-sass": "^2.1.1",
     "pre-commit": "^1.0.6",
     "tap-spec": "^3.0.0",
     "tape": "^4.0.0"
