--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "coverage"
   ],
   "dependencies": {
+    "d-bap": "^1.0.0",
     "handlebars": "^3.0.1",
     "hapi": "^8.4.0",
     "hapi-auth-cookie": "^2.0.0",
