add POST /member/{id}/delete route

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/foundersandcoders/clerk.git"
   },
-  "author": "William Fisher, Naomi Gaynor",
+  "author": "William Fisher, Naomi Gaynor, Besart Shyti",
   "license": "GPL",
   "bugs": {
     "url": "https://github.com/foundersandcoders/clerk/issues"
