--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "coverage"
   ],
   "dependencies": {
+    "arrested": "0.0.2",
     "async": "^0.9.0",
     "babyparse": "^0.4.3",
     "d-bap": "^1.0.0",
+    "givit": "0.0.1",
     "handlebars": "^3.0.1",
     "hapi": "^8.4.0",
     "hapi-auth-cookie": "^2.0.0",
