--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hapi": "^8.4.0",
     "hapi-auth-cookie": "^2.0.0",
     "hyperquest": "^1.2.0",
+    "moment": "^2.10.3",
     "request": "^2.55.0",
     "torf": "^1.0.3",
     "upload-element": "^1.0.1",
