refactor components into pages

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "hapi-auth-cookie": "^2.0.0",
     "hyperquest": "^1.2.0",
     "moment": "^2.10.3",
+    "observ": "^0.2.0",
+    "observ-array": "^3.2.1",
+    "observ-struct": "^6.0.0",
     "request": "^2.55.0",
     "torf": "^1.0.3",
     "upload-element": "^1.0.1",
