--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/foundersandcoders/clerk",
   "devDependencies": {
     "browserify": "^10.0.0",
+    "debug": "^2.2.0",
     "faster": "^3.4.6",
     "istanbul": "^0.3.13",
     "jsdom": "^3.1.2",
