--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Membership management for Friends of Chichester Harbour",
   "main": "index.js",
   "scripts": {
-    "end2end": "protractor ./test/end2end/config.js",
+    "end": "protractor ./test/end2end/config.js",
+    "wd": "webdriver-manager update && webdriver-manager start",
     "test": "tape ./test/*.test.js",
     "test-end": "tape ./test/frontend/*.test.js",
     "jshint": "jshint -c ./.jshintrc --exclude-path .gitignore .",
